--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -15,103 +15,117 @@
       </h1>
 
       <p class="text-justify pb-10">
-        This statement outlines expectations of behavior and values that all
-        team members must abide by, no exceptions. Principal Investigators
-        (Elizabeth, Luke, Noah) will deal with any issues that may arise. This
-        code of conduct is to ensure a safe and enjoyable working environment.
-        High-quality research can only be conducted when you feel supported.
+        This Code of Conduct outlines expectations for professional behavior and
+        shared values for all members of the CDR Forecasting Stack project.
+        These expectations apply to <strong>everyone</strong> involved in the
+        project, without exception, including Principal Investigators,
+        Postdoctoral Scientists, students, collaborators, and etc.
+      </p>
+
+      <p class="text-justify pb-10">
+        This Code of Conduct applies to all project-related spaces and
+        activities, including meetings, workshops, conferences, fieldwork,
+        online platforms (e.g. Slack, GitHub, email), and social events
+        associated with the project. Nothing in this Code of Conduct replaces or
+        supersedes applicable university policies. The purpose of this Code of
+        Conduct is to foster a safe, inclusive, respectful, and productive
+        working environment. High-quality research can only be conducted when
+        all participants feel supported and treated with dignity.
+      </p>
+
+      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
+        Core Principles
+      </h2>
+
+      <p class="text-justify pb-6">We are connitted to:</p>
+      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+        <li>Mutual respect and professionalism</li>
+        <li>Open communication and collaboration</li>
+        <li>Transparent, reproducible, and open research</li>
+      </ul>
+
+      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
+        Expected Behavior
+      </h2>
+
+      <p class="text-justify pb-6">All participants are expected to:</p>
+
+      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+        <li>
+          Treat colleagues with respect in all interactions, communications, and
+          actions.
+        </li>
+        <li>Learn and use colleagues’ names and correct pronunciations.</li>
+        <li>
+          Respect others’ working hours, availability, and response times. While
+          tools such as Slack or email enable rapid communication, it should not
+          be assumed that recipients are immediately available.
+        </li>
+        <li>
+          Be mindful of power dynamics. Suggestions, feedback, or requests from
+          supervisors or senior collaborators may be perceived as directives by
+          junior team members, even when not intended that way. Because
+          supervisors and senior collaborators influence evaluations, funding,
+          and authorship, their words and actions may carry more weight than
+          intended. Those in positions of authority should take extra care to
+          foster open discussion and to make it safe to disagree.
+        </li>
+        <li>
+          Use appropriate judgment when choosing communication channels,
+          especially for sensitive or complex matters.
+        </li>
+        <li>
+          Communicate openly and clearly to avoid misunderstandings and
+          inadvertent exclusion.
+        </li>
+        <li>
+          Assume good faith in interactions and encourage addressing
+          misunderstandings early and constructively whenever possible.
+        </li>
+        <li>
+          Contribute constructively in meetings by listening actively, inviting
+          input, and avoiding side conversations that may be distracting or
+          exclusionary.
+        </li>
+      </ul>
+
+      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
+        Unacceptable Behavior
+      </h2>
+
+      <p class="text-justify pb-6">
+        Unacceptable behaviors include, but are not limited to:
+      </p>
+
+      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+        <li>Racism, sexism, ableism, or other forms of discrimination</li>
+        <li>Hate speech, harassment, threats, or intimidation</li>
+        <li>Unwelcome sexual attention or advances</li>
+        <li>Personal attacks, bullying, or sustained disruptive behavior</li>
+        <li>
+          Retaliation against individuals who raise concerns in good faith
+        </li>
+      </ul>
+      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
+        Reporting and Response
+      </h2>
+
+      <p class="text-justify pb-6">
+        If you experience or witness behavior that violates this Code of
+        Conduct, you are encouraged to take one of the following steps:
       </p>
 
       <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
         <li>
-          Unacceptable behaviors include racism, hate speech, harassment,
-          threats, unwelcome sexual attention, and personal attacks.
+          Report the concern directly to a Principal Investigator (Elizabeth,
+          Luke, or Noah)
         </li>
-
-        <li>Be respectful in all interactions, communications, and actions.</li>
-
-        <li>
-          Take care of your choice of medium for communicating sensitive
-          matters.
-        </li>
-
-        <li>
-          Make a point to learn your colleague's name and correct pronunciation.
-        </li>
-
-        <li>
-          Respect your colleague's working hours, limited availability, or
-          response time due to family, personal, or other situations. While we
-          are used to instant messages (e.g. Slack) reaching into our offices
-          and homes, it is not appropriate to assume the recipient is not
-          otherwise engaged.
-        </li>
-
-        <li>
-          Open communication of intent and understanding are key to avoiding
-          misunderstandings and inadvertent exclusion.
-        </li>
-
-        <li>
-          In meetings, be considerate of all present. Make sure to listen,
-          invite input, and be constructive. Avoid side conversations as they
-          can be distracting.
-        </li>
-
-        <li>
-          If you are the subject of, or witness to, inappropriate behavior
-          please either inform a PI yourself, or ask another member whom you
-          trust to do so on your behalf.
-        </li>
-
-        <li>
-          We will follow the
-          <a href="https://www.icmje.org/recommendations/">
-            Vancouver Group recommendations (VGR)
-          </a>
-          on authorship
-        </li>
-
-        <li>
-          We will use the
-          <a href="https://credit.niso.org/">CRediT taxonomy</a> for describing
-          all authorship contributions.
-        </li>
-
-        <li>
-          Transparency and reproducibility of the research and publication
-          process are required, not only to aid the peer review process but also
-          as a guiding principle.
-        </li>
-
-        <li>
-          Whenever possible, all publications should be submitted open access,
-          whether via the journal as a whole, or via payment of an open access
-          fee. When not possible, all coauthors should take steps to submit the
-          manuscript in their respective institutions' internal server for
-          publications, and also a pre-review server such as arXiv.
-        </li>
-
-        <li>
-          Data used in publications should be made openly available, not just
-          upon request. This can be prohibitive for some datasets but reduced
-          forms of the data, as presented in the publication, are a minimum
-          requirement. This is becoming the minimum standard at many journals.
-        </li>
-
-        <li>
-          Copyright on codes: All codes produced within the context of CDR
-          Forecasting Stack should be hosted by the CDR Forecasting Stack GitHub
-          organization. Software produced in collaboration with CDR Forecasting
-          Stack but not solely for CDR Forecasting Stack should be open source
-          and accessible without fee or authentication barriers. It is
-          reasonable to use private repositories during development. The
-          particular license is up to the original authors but should ideally be
-          consistent with your host institution and must be either FAIR or open
-          source. We suggest the MIT license for code and the Creative Commons
-          CC-BY license for products such as text, images, websites, etc.
-        </li>
+        <li>Ask a trusted team member to report the concern on your behalf</li>
       </ul>
+      <p class="text-justify pb-10">
+        Reports will be handled with discretion and care. Retaliation against
+        individuals who raise concerns in good faith will not be tolerated.
+      </p>
     </main>
 
     <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
