feat: update pages

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
-  <body class="min-h-screen flex flex-col">
-    <header id="header" class="sticky top-0 bg-white z-50"></header>
+  <body>
+    <header id="header"></header>
 
     <main
       class="relative bg-cover bg-center h-screen flex items-center"
@@ -21,17 +21,17 @@
       ></div>
 
       <div class="relative max-w-2xl text-white mx-32 text-justify">
-        <h1 class="text-4xl font-bold mb-4">CDR Forecasting Stack</h1>
-        <p class="text-lg md:text-2xl">
+        <h1 class="text-left">CDR Forecasting Stack</h1>
+        <p class="text-white">
           Accessible, high-fidelity forecasting for marine carbon removal. An
           AI-enabled stack combining physics-based models and machine learning
           to predict CO<sub>2</sub> uptake and durability at scale.
         </p>
 
         <div class="pt-10 flex items-center gap-5 text-md text-gray-200">
-          <span class="text-lg font-semibold tracking-wide whitespace-nowrap"
-            >This project is supported by Bezos Earth Fund</span
-          >
+          <p class="text-white italic whitespace-nowrap">
+            This project is generously supported by Bezos Earth Fund
+          </p>
           <div class="bg-white/50 backdrop-blur-sm rounded px-2 py-1">
             <img
               src="/images/logos/bef.webp"
