--- a/pages/about.html
+++ b/pages/about.html
@@ -6,13 +6,13 @@
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
-  <body class="min-h-screen flex flex-col">
-    <header id="header" class="sticky top-0 bg-white z-50"></header>
+  <body>
+    <header id="header"></header>
 
     <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
-      <h1 class="text-3xl md:text-4xl font-bold mb-6 text-center">About Us</h1>
+      <h1>About Us</h1>
 
-      <p class="text-lg text-gray-700 mb-12 text-justify">
+      <p>
         Our mission is to make high-fidelity marine carbon dioxide removal
         (mCDR) forecasting accessible, fast, and scientifically robbust. We are
         building an AI-enabled forecasting stack that couples GPU-accelerated
@@ -24,9 +24,9 @@
         community of researchers, practitioners, and decision-makers.
       </p>
 
-      <h1 class="text-3xl md:text-4xl font-bold mb-6 text-center">Funding</h1>
+      <h1>Funding</h1>
 
-      <p class="text-lg text-gray-700 mb-12 text-justify">
+      <p>
         This project is supported by Bezos Earth Fund, a philanthropic
         organization founded by Jeff Bezos that supports science, policy, and
         innovation to address climate change and protect nature. Read more in
@@ -35,7 +35,7 @@
         <a
           href="https://naturalcarboncapture.yale.edu/posts/2025-10-23-ycncc-team-wins-19m-bezos-ai-for-climate-grand-challenge-phase-ii-award"
           target="_blank"
-          class="inline-block text-blue-600 font-medium underline decoration-blue-400 hover:text-blue-800 hover:decoration-blue-600 transition-colors"
+          class="inline-block text-[#1a335c] font-medium underline decoration-[#1a335c] hover:text-blue-800 hover:decoration-blue-600 transition-colors"
         >
           press release
         </a>
