--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -6,15 +6,13 @@
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
-  <body class="min-h-screen flex flex-col">
-    <header id="header" class="sticky top-0 bg-white z-50"></header>
+  <body>
+    <header id="header"></header>
 
     <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
-      <h1 class="pt-10 text-3xl md:text-4xl font-bold mb-6 text-center">
-        Code of Conduct
-      </h1>
+      <h1>Code of Conduct</h1>
 
-      <p class="text-justify pb-10">
+      <p class="text-justify pb-10 font-sourcesans">
         This Code of Conduct outlines expectations for professional behavior and
         shared values for all members of the CDR Forecasting Stack project.
         These expectations apply to <strong>everyone</strong> involved in the
@@ -33,9 +31,7 @@
         all participants feel supported and treated with dignity.
       </p>
 
-      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
-        Core Principles
-      </h2>
+      <h2>Core Principles</h2>
 
       <p class="text-justify pb-6">We are connitted to:</p>
       <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
@@ -44,9 +40,7 @@
         <li>Transparent, reproducible, and open research</li>
       </ul>
 
-      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
-        Expected Behavior
-      </h2>
+      <h2>Expected Behavior</h2>
 
       <p class="text-justify pb-6">All participants are expected to:</p>
 
@@ -89,9 +83,7 @@
         </li>
       </ul>
 
-      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
-        Unacceptable Behavior
-      </h2>
+      <h2>Unacceptable Behavior</h2>
 
       <p class="text-justify pb-6">
         Unacceptable behaviors include, but are not limited to:
@@ -106,9 +98,7 @@
           Retaliation against individuals who raise concerns in good faith
         </li>
       </ul>
-      <h2 class="pt-10 text-2xl md:text-3xl font-bold mb-6 text-center">
-        Reporting and Response
-      </h2>
+      <h2>Reporting and Response</h2>
 
       <p class="text-justify pb-6">
         If you experience or witness behavior that violates this Code of
