--- a/pages/join-us.html
+++ b/pages/join-us.html
@@ -6,13 +6,11 @@
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
-  <body class="min-h-screen flex flex-col">
+  <body>
     <header id="header" class="sticky top-0 bg-white z-50"></header>
 
     <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
-      <h1 class="text-3xl md:text-4xl font-bold mb-8 text-center">
-        Join Our Team!
-      </h1>
+      <h1>Join Our Team!</h1>
 
       <ul class="space-y-6">
         <li
@@ -21,7 +19,7 @@
           <a
             href="https://apply.interfolio.com/178791"
             target="_blank"
-            class="text-xl font-semibold text-blue-600 hover:underline"
+            class="text-xl font-semibold text-[#1a335c] hover:underline font-sourcesans"
           >
             Postdoctoral Associate, Machine Learning Scientist
           </a>
@@ -33,7 +31,7 @@
           <a
             href="https://apply.interfolio.com/178803"
             target="_blank"
-            class="text-xl font-semibold text-blue-600 hover:underline"
+            class="text-xl font-semibold text-[#1a335c] hover:underline font-sourcesans"
           >
             Postdoctoral Associate, Biogeochemical Modeler
           </a>
