--- a/pages/research.html
+++ b/pages/research.html
@@ -6,8 +6,8 @@
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
-  <body class="min-h-screen flex flex-col">
-    <header id="header" class="sticky top-0 bg-white z-50"></header>
+  <body>
+    <header id="header"></header>
 
     <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
       <!-- Page header -->
