--- a/pages/team.html
+++ b/pages/team.html
@@ -6,15 +6,13 @@
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
-  <body class="min-h-screen flex flex-col">
-    <header id="header" class="sticky top-0 bg-white z-50"></header>
+  <body>
+    <header id="header"></header>
 
     <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
-      <h1 class="text-3xl md:text-4xl font-bold mb-12 text-center">
-        Principal Investigators
-      </h1>
+      <h1>Principal Investigators</h1>
 
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <!-- Elizabeth-->
         <div
           class="bg-white rounded-lg border border-gray-200 p-2 text-center transition shadow-md"
@@ -24,13 +22,9 @@
             alt="Team member"
             class="mx-auto w-75 h-75 rounded-md object-cover shadow-md mb-4"
           />
-          <div class="p-6">
-            <h2 class="text-xl font-semibold mb-1">
-              Prof. Elizabeth Yankovsky
-            </h2>
-            <p class="text-sm text-gray-600 mb-3">
-              Lead Principal Investigator
-            </p>
+          <div class="p-2">
+            <h3>Prof. Elizabeth Yankovsky</h3>
+            <p class="text-center">Principal Investigator</p>
             <div class="flex flex-wrap justify-center gap-2 mt-2">
               <span class="badge">Physical Oceanographer</span>
               <span class="badge">Climate Modeler</span>
@@ -48,13 +42,13 @@
             alt="Team member"
             class="mx-auto w-75 h-75 rounded-md object-cover shadow-md mb-4"
           />
-          <div class="p-6">
-            <h2 class="text-xl font-semibold mb-1">Luke Gloege, Ph.D.</h2>
-            <p class="text-sm text-gray-600 mb-3">Principal Investigator</p>
+          <div class="p-2">
+            <h3>Luke Gloege, Ph.D.</h3>
+            <p class="text-center">Principal Investigator</p>
             <div class="flex flex-wrap justify-center gap-2 mt-2">
               <span class="badge">Biogeochemical Modeler</span>
               <span class="badge">Climate Modeler</span>
-              <span class="badge">Computational Climate Sientist</span>
+              <span class="badge">Computational Climate Scientist</span>
             </div>
           </div>
         </div>
@@ -68,9 +62,9 @@
             alt="Team member"
             class="mx-auto w-75 h-75 rounded-md object-cover shadow-md mb-4"
           />
-          <div class="p-6">
-            <h2 class="text-xl font-semibold mb-1">Prof. Noah Planavsky</h2>
-            <p class="text-sm text-gray-600 mb-3">Principal Investigator</p>
+          <div class="p-2">
+            <h3>Prof. Noah Planavsky</h3>
+            <p class="text-center">Principal Investigator</p>
             <div class="flex flex-wrap justify-center gap-2 mt-2">
               <span class="badge">Isotope Geochemist</span>
               <span class="badge">Enhanced Rock Weathering Scientist</span>
@@ -79,40 +73,6 @@
           </div>
         </div>
       </div>
-
-      <h1 class="pt-12 text-3xl md:text-4xl font-bold mb-12 text-center">
-        Postdoctoral Scientists
-      </h1>
-
-      <p class="text-lg text-gray-700 mb-12 text-center">
-        We are actively looking for scientists to join our team!
-      </p>
-
-      <ul class="space-y-6">
-        <li
-          class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition"
-        >
-          <a
-            href="https://apply.interfolio.com/178791"
-            target="_blank"
-            class="text-xl font-semibold text-blue-600 hover:underline"
-          >
-            Postdoctoral Associate, Machine Learning Scientist
-          </a>
-        </li>
-
-        <li
-          class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition"
-        >
-          <a
-            href="https://apply.interfolio.com/178803"
-            target="_blank"
-            class="text-xl font-semibold text-blue-600 hover:underline"
-          >
-            Postdoctoral Associate, Biogeochemical Modeler
-          </a>
-        </li>
-      </ul>
     </main>
 
     <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
