--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -12,39 +12,36 @@
     <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
       <h1>Code of Conduct</h1>
 
-      <p class="text-justify pb-10 font-sourcesans">
-        This Code of Conduct outlines expectations for professional behavior and
-        shared values for all members of the CDR Forecasting Stack project.
-        These expectations apply to <strong>everyone</strong> involved in the
-        project, without exception, including Principal Investigators,
-        Postdoctoral Scientists, students, collaborators, and etc.
-      </p>
-
       <p class="text-justify pb-10">
-        This Code of Conduct applies to all project-related spaces and
-        activities, including meetings, workshops, conferences, fieldwork,
-        online platforms (e.g. Slack, GitHub, email), and social events
-        associated with the project. Nothing in this Code of Conduct replaces or
-        supersedes applicable university policies. The purpose of this Code of
-        Conduct is to foster a safe, inclusive, respectful, and productive
-        working environment. High-quality research can only be conducted when
-        all participants feel supported and treated with dignity.
+        The purpose of this Code of Conduct is to foster a safe, inclusive,
+        respectful, and productive working environment. High-quality research
+        can only be conducted when all participants feel supported and treated
+        with dignity. The expectations outlined in this document apply to
+        <em>everyone</em> involved in the project, without exception, including
+        Principal Investigators, Postdoctoral Scientists, students,
+        collaborators, etc. Nothing in this document replaces or supersedes
+        applicable university policies.
       </p>
 
       <h2>Core Principles</h2>
 
       <p class="text-justify pb-6">We are connitted to:</p>
-      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
         <li>Mutual respect and professionalism</li>
         <li>Open communication and collaboration</li>
         <li>Transparent, reproducible, and open research</li>
       </ul>
 
-      <h2>Expected Behavior</h2>
+      <h2 class="py-6">Expected Behavior</h2>
 
       <p class="text-justify pb-6">All participants are expected to:</p>
 
-      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
+        <li>
+          Contribute constructively in meetings by listening actively, inviting
+          input, and avoiding side conversations that may be distracting or
+          exclusionary.
+        </li>
         <li>
           Treat colleagues with respect in all interactions, communications, and
           actions.
@@ -76,20 +73,15 @@
           Assume good faith in interactions and encourage addressing
           misunderstandings early and constructively whenever possible.
         </li>
-        <li>
-          Contribute constructively in meetings by listening actively, inviting
-          input, and avoiding side conversations that may be distracting or
-          exclusionary.
-        </li>
       </ul>
 
-      <h2>Unacceptable Behavior</h2>
+      <h2 class="py-6">Unacceptable Behavior</h2>
 
       <p class="text-justify pb-6">
         Unacceptable behaviors include, but are not limited to:
       </p>
 
-      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
         <li>Racism, sexism, ableism, or other forms of discrimination</li>
         <li>Hate speech, harassment, threats, or intimidation</li>
         <li>Unwelcome sexual attention or advances</li>
@@ -98,24 +90,23 @@
           Retaliation against individuals who raise concerns in good faith
         </li>
       </ul>
-      <h2>Reporting and Response</h2>
+
+      <h2 class="py-6">Reporting and Response</h2>
 
       <p class="text-justify pb-6">
-        If you experience or witness behavior that violates this Code of
-        Conduct, you are encouraged to take one of the following steps:
+        Reports will be handled with discretion and care. Retaliation against
+        individuals who raise concerns in good faith will not be tolerated. If
+        you experience or witness behavior that violates this Code of Conduct,
+        you are encouraged to take one of the following steps:
       </p>
 
-      <ul class="list-disc list-inside space-y-2 text-lg text-gray-700">
+      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
         <li>
           Report the concern directly to a Principal Investigator (Elizabeth,
           Luke, or Noah)
         </li>
         <li>Ask a trusted team member to report the concern on your behalf</li>
       </ul>
-      <p class="text-justify pb-10">
-        Reports will be handled with discretion and care. Retaliation against
-        individuals who raise concerns in good faith will not be tolerated.
-      </p>
     </main>
 
     <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
