refactor: make custom tailwind classes to simplify code

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -35,7 +35,7 @@
         <a
           href="https://naturalcarboncapture.yale.edu/posts/2025-10-23-ycncc-team-wins-19m-bezos-ai-for-climate-grand-challenge-phase-ii-award"
           target="_blank"
-          class="inline-block text-[#1a335c] font-medium underline decoration-[#1a335c] hover:text-blue-800 hover:decoration-blue-600 transition-colors"
+          class="link"
         >
           press release
         </a>
