--- a/pages/team.html
+++ b/pages/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -14,18 +14,16 @@
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <!-- Elizabeth-->
-        <div
-          class="bg-white rounded-lg border border-gray-200 p-2 text-center transition shadow-md"
-        >
+        <div class="card">
           <img
             src="https://naturalcarboncapture.yale.edu/sites/default/files/styles/1_1_600/public/2024-12/headshot.jpg?h=e5aec6c8&itok=dTUB5jFh"
             alt="Team member"
-            class="mx-auto w-75 h-75 rounded-md object-cover shadow-md mb-4"
+            class="headshot"
           />
           <div class="p-2">
             <h3>Prof. Elizabeth Yankovsky</h3>
             <p class="text-center">Principal Investigator</p>
-            <div class="flex flex-wrap justify-center gap-2 mt-2">
+            <div class="badge-container">
               <span class="badge">Physical Oceanographer</span>
               <span class="badge">Climate Modeler</span>
               <span class="badge">Computational Climate Scientist</span>
@@ -34,18 +32,16 @@
         </div>
 
         <!-- Luke-->
-        <div
-          class="bg-white rounded-lg border border-gray-200 p-2 text-center transition shadow-md"
-        >
+        <div class="card">
           <img
             src="https://naturalcarboncapture.yale.edu/sites/default/files/styles/1_1_600/public/2024-11/luke%202.jpg?h=4f5ed759&itok=GFC1DUgm"
             alt="Team member"
-            class="mx-auto w-75 h-75 rounded-md object-cover shadow-md mb-4"
+            class="headshot"
           />
           <div class="p-2">
             <h3>Luke Gloege, Ph.D.</h3>
             <p class="text-center">Principal Investigator</p>
-            <div class="flex flex-wrap justify-center gap-2 mt-2">
+            <div class="badge-container">
               <span class="badge">Biogeochemical Modeler</span>
               <span class="badge">Climate Modeler</span>
               <span class="badge">Computational Climate Scientist</span>
@@ -54,18 +50,16 @@
         </div>
 
         <!-- Noah -->
-        <div
-          class="bg-white rounded-lg border border-gray-200 p-2 text-center transition shadow-md"
-        >
+        <div class="card">
           <img
             src="https://naturalcarboncapture.yale.edu/sites/default/files/styles/1_1_600/public/2025-09/Noah%202025.jpg?h=41de4079&itok=iL1YRw-e"
             alt="Team member"
-            class="mx-auto w-75 h-75 rounded-md object-cover shadow-md mb-4"
+            class="headshot"
           />
           <div class="p-2">
             <h3>Prof. Noah Planavsky</h3>
             <p class="text-center">Principal Investigator</p>
-            <div class="flex flex-wrap justify-center gap-2 mt-2">
+            <div class="badge-container">
               <span class="badge">Isotope Geochemist</span>
               <span class="badge">Enhanced Rock Weathering Scientist</span>
               <span class="badge">Climate Scientist</span>
