--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
     <main
       class="relative bg-cover bg-center h-screen flex items-center"
       style="
-        background-image: url('https://images.unsplash.com/photo-1508624217470-5ef0f947d8be?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+        background-image: url(&quot;https://images.unsplash.com/photo-1508624217470-5ef0f947d8be?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&quot;);
       "
     >
       <!-- Overlay for readability -->
@@ -20,10 +20,10 @@
         class="absolute inset-0 bg-linear-to-r from-black/95 via-black/40 to-black/0"
       ></div>
 
-      <div class="relative max-w-2xl text-white mx-32 text-justify">
-        <h1 class="text-left">CDR Forecasting Stack</h1>
-        <p class="text-white">
-          Accessible, high-fidelity forecasting for marine carbon removal. An
+      <div class="relative max-w-3xl text-white mx-32 text-justify">
+        <h1 class="text-left text-7xl">CDR Forecasting Stack</h1>
+        <p class="text-white text-2xl">
+          Accessible and high-fidelity forecasting for marine carbon removal. An
           AI-enabled stack combining physics-based models and machine learning
           to predict CO<sub>2</sub> uptake and durability at scale.
         </p>
