improve styling for small devices

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         class="absolute inset-0 bg-linear-to-r from-black/95 via-black/40 to-black/0"
       ></div>
 
-      <div class="relative max-w-3xl text-white mx-32 text-justify">
+      <div class="relative max-w-3xl text-white mx-12 sm:mx-32 text-justify">
         <h1 class="text-left text-7xl">CDR Forecasting Stack</h1>
-        <p class="text-white text-2xl">
+        <p class="text-white text-2xl wrap-break-word">
           Accessible and high-fidelity forecasting for marine carbon removal. An
           AI-enabled stack combining physics-based models and machine learning
           to predict CO<sub>2</sub> uptake and durability at scale.
