--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -9,7 +9,7 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
+    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
       <h1>Code of Conduct</h1>
 
       <p class="text-justify pb-10">
@@ -109,7 +109,7 @@
       </ul>
     </main>
 
-    <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
+    <footer id="footer"></footer>
 
     <script src="/scripts/inject-header.js"></script>
     <script src="/scripts/inject-footer.js"></script>
