--- a/pages/join-us.html
+++ b/pages/join-us.html
@@ -9,7 +9,7 @@
   <body>
     <header id="header" class="sticky top-0 bg-white z-50"></header>
 
-    <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
+    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
       <h1>Join Our Team!</h1>
 
       <ul class="space-y-6">
@@ -39,7 +39,7 @@
       </ul>
     </main>
 
-    <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
+    <footer id="footer"></footer>
 
     <script src="/scripts/inject-header.js"></script>
     <script src="/scripts/inject-footer.js"></script>
