--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
+    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
       <h1>About Us</h1>
 
       <p>
@@ -41,22 +41,22 @@
         </a>
       </p>
 
-      <div class="flex justify-center gap-8 mt-6">
+      <div class="flex justify-center items-center gap-8 md:gap-32 pt-8">
         <img
           src="/images/logos/bef.webp"
           alt="Bezos Earth Fund"
-          class="h-30 w-auto object-contain"
+          class="h-15 md:h-30"
         />
 
         <img
           src="/images/logos/ai-nature.webp"
           alt="AI Nature"
-          class="h-30 w-auto object-contain"
+          class="h-15 md:h-30"
         />
       </div>
     </main>
 
-    <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
+    <footer id="footer"></footer>
 
     <script src="/scripts/inject-header.js"></script>
     <script src="/scripts/inject-footer.js"></script>
