--- a/pages/research.html
+++ b/pages/research.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
+    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
       <!-- Page header -->
       <h1 class="text-3xl md:text-4xl font-bold mb-6 text-center">Research</h1>
 
@@ -42,7 +42,7 @@
       </div>
     </main>
 
-    <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
+    <footer id="footer"></footer>
 
     <script src="/scripts/inject-header.js"></script>
     <script src="/scripts/inject-footer.js"></script>
