--- a/pages/team.html
+++ b/pages/team.html
@@ -9,10 +9,10 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex-1 max-w-5xl mx-auto px-6 py-16">
+    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
       <h1>Principal Investigators</h1>
 
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+      <div class="grid grid-cols-1 gap-4 pb-4 md:pb-0 md:grid-cols-3">
         <!-- Elizabeth-->
         <div class="card">
           <img
@@ -69,7 +69,7 @@
       </div>
     </main>
 
-    <footer id="footer" class="max-w-5xl mx-auto w-full"></footer>
+    <footer id="footer"></footer>
 
     <script src="/scripts/inject-header.js"></script>
     <script src="/scripts/inject-footer.js"></script>
