fix: correct url to posts so they render, replaced spaced with a dash so no spaces

--- a/pages/updates.html
+++ b/pages/updates.html
@@ -33,7 +33,7 @@
 
   
         <a
-          href="/pages/posts/2026-01-16-See you at OSM26.html"
+          href="/pages/posts/2026-01-16-see-you-at-osm26.html"
           class="flex items-center gap-1 text-md text-gray-600 hover:underline mt-2"
         >
           <span>Read more</span>
