style: format files with prettier

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="header"></header>
 
     <main
-      class="relative bg-cover bg-center h-screen flex items-center"
+      class="relative flex h-screen items-center bg-cover bg-center"
       style="
         background-image: url(&quot;https://images.unsplash.com/photo-1508624217470-5ef0f947d8be?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&quot;);
       "
@@ -20,26 +20,26 @@
         class="absolute inset-0 bg-linear-to-r from-black/95 via-black/40 to-black/0"
       ></div>
 
-      <div class="relative max-w-3xl text-white mx-12 sm:mx-32 text-justify">
+      <div class="relative mx-12 max-w-3xl text-justify text-white sm:mx-32">
         <h1 class="text-left text-7xl">CDR Forecasting Stack</h1>
-        <p class="text-white text-2xl wrap-break-word">
+        <p class="text-2xl wrap-break-word text-white">
           Accessible and high-fidelity forecasting for marine carbon removal. An
           AI-enabled stack combining physics-based models and machine learning
           to predict CO<sub>2</sub> uptake and durability at scale.
         </p>
 
-        <div class="pt-10 flex items-center gap-5 text-md text-gray-200">
-          <p class="text-white italic whitespace-nowrap">
+        <div class="text-md flex items-center gap-5 pt-10 text-gray-200">
+          <p class="whitespace-nowrap text-white italic">
             This project is generously supported by Bezos Earth Fund
           </p>
-          <div class="bg-white/50 backdrop-blur-sm rounded px-2 py-1">
+          <div class="rounded bg-white/50 px-2 py-1 backdrop-blur-sm">
             <img
               src="/images/logos/bef.webp"
               alt="Bezos Earth Fund"
               class="h-15 w-auto object-contain"
             />
           </div>
-          <div class="bg-white/50 backdrop-blur-sm rounded px-2 py-1">
+          <div class="rounded bg-white/50 px-2 py-1 backdrop-blur-sm">
             <img
               src="/images/logos/ai-nature.webp"
               alt="Bezos Earth Fund"
