--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -9,10 +9,10 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
+    <main class="mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl md:px-0">
       <h1>Code of Conduct</h1>
 
-      <p class="text-justify pb-10">
+      <p class="pb-10 text-justify">
         The purpose of this Code of Conduct is to foster a safe, inclusive,
         respectful, and productive working environment. High-quality research
         can only be conducted when all participants feel supported and treated
@@ -25,8 +25,8 @@
 
       <h2>Core Principles</h2>
 
-      <p class="text-justify pb-6">We are connitted to:</p>
-      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
+      <p class="pb-6 text-justify">We are connitted to:</p>
+      <ul class="list-inside list-disc space-y-1 text-lg text-gray-700">
         <li>Mutual respect and professionalism</li>
         <li>Open communication and collaboration</li>
         <li>Transparent, reproducible, and open research</li>
@@ -34,9 +34,9 @@
 
       <h2 class="py-6">Expected Behavior</h2>
 
-      <p class="text-justify pb-6">All participants are expected to:</p>
+      <p class="pb-6 text-justify">All participants are expected to:</p>
 
-      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
+      <ul class="list-inside list-disc space-y-1 text-lg text-gray-700">
         <li>
           Contribute constructively in meetings by listening actively, inviting
           input, and avoiding side conversations that may be distracting or
@@ -77,11 +77,11 @@
 
       <h2 class="py-6">Unacceptable Behavior</h2>
 
-      <p class="text-justify pb-6">
+      <p class="pb-6 text-justify">
         Unacceptable behaviors include, but are not limited to:
       </p>
 
-      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
+      <ul class="list-inside list-disc space-y-1 text-lg text-gray-700">
         <li>Racism, sexism, ableism, or other forms of discrimination</li>
         <li>Hate speech, harassment, threats, or intimidation</li>
         <li>Unwelcome sexual attention or advances</li>
@@ -93,14 +93,14 @@
 
       <h2 class="py-6">Reporting and Response</h2>
 
-      <p class="text-justify pb-6">
+      <p class="pb-6 text-justify">
         Reports will be handled with discretion and care. Retaliation against
         individuals who raise concerns in good faith will not be tolerated. If
         you experience or witness behavior that violates this Code of Conduct,
         you are encouraged to take one of the following steps:
       </p>
 
-      <ul class="list-disc list-inside space-y-1 text-lg text-gray-700">
+      <ul class="list-inside list-disc space-y-1 text-lg text-gray-700">
         <li>
           Report the concern directly to a Principal Investigator (Elizabeth,
           Luke, or Noah)
