--- a/pages/join-us.html
+++ b/pages/join-us.html
@@ -7,31 +7,31 @@
   </head>
 
   <body>
-    <header id="header" class="sticky top-0 bg-white z-50"></header>
+    <header id="header" class="sticky top-0 z-50 bg-white"></header>
 
-    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
+    <main class="mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl md:px-0">
       <h1>Join Our Team!</h1>
 
       <ul class="space-y-6">
         <li
-          class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition"
+          class="rounded-lg border border-gray-200 p-6 transition hover:shadow-md"
         >
           <a
             href="https://apply.interfolio.com/178791"
             target="_blank"
-            class="text-xl font-semibold text-[#1a335c] hover:underline font-sourcesans"
+            class="font-sourcesans text-xl font-semibold text-[#1a335c] hover:underline"
           >
             Postdoctoral Associate, Machine Learning Scientist
           </a>
         </li>
 
         <li
-          class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition"
+          class="rounded-lg border border-gray-200 p-6 transition hover:shadow-md"
         >
           <a
             href="https://apply.interfolio.com/178803"
             target="_blank"
-            class="text-xl font-semibold text-[#1a335c] hover:underline font-sourcesans"
+            class="font-sourcesans text-xl font-semibold text-[#1a335c] hover:underline"
           >
             Postdoctoral Associate, Biogeochemical Modeler
           </a>
