--- a/pages/team.html
+++ b/pages/team.html
@@ -9,10 +9,10 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
+    <main class="mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl md:px-0">
       <h1>Principal Investigators</h1>
 
-      <div class="grid grid-cols-1 gap-4 pb-4 md:pb-0 md:grid-cols-3">
+      <div class="grid grid-cols-1 gap-4 pb-4 md:grid-cols-3 md:pb-0">
         <!-- Elizabeth-->
         <div class="card">
           <img
