--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
+    <main class="mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl md:px-0">
       <h1>About Us</h1>
 
       <p>
@@ -41,7 +41,7 @@
         </a>
       </p>
 
-      <div class="flex justify-center items-center gap-8 md:gap-32 pt-8">
+      <div class="flex items-center justify-center gap-8 pt-8 md:gap-32">
         <img
           src="/images/logos/bef.webp"
           alt="Bezos Earth Fund"
