--- a/pages/research.html
+++ b/pages/research.html
@@ -9,24 +9,24 @@
   <body>
     <header id="header"></header>
 
-    <main class="flex flex-col px-8 mb-auto md:px-0 md:max-w-5xl md:mx-auto">
+    <main class="mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl md:px-0">
       <!-- Page header -->
-      <h1 class="text-3xl md:text-4xl font-bold mb-6 text-center">Research</h1>
+      <h1 class="mb-6 text-center text-3xl font-bold md:text-4xl">Research</h1>
 
-      <p class="text-lg text-gray-700 mb-12 text-center">
+      <p class="mb-12 text-center text-lg text-gray-700">
         Explore our code, models, and datasets for CDR forecasting.
       </p>
 
       <!-- GitHub link -->
-      <div class="flex justify-center mb-16">
+      <div class="mb-16 flex justify-center">
         <a
           href="https://github.com/CDR-Forecasting-Stack"
           target="_blank"
-          class="flex items-center space-x-2 px-4 py-2 border border-gray-300 rounded hover:bg-gray-100 transition"
+          class="flex items-center space-x-2 rounded border border-gray-300 px-4 py-2 transition hover:bg-gray-100"
         >
           <!-- GitHub Logo (SVG) -->
           <svg
-            class="w-6 h-6 text-gray-800"
+            class="h-6 w-6 text-gray-800"
             fill="currentColor"
             viewBox="0 0 24 24"
             aria-hidden="true"
@@ -37,7 +37,7 @@
               d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.26.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.385-1.334-1.753-1.334-1.753-1.09-.745.083-.73.083-.73 1.205.084 1.838 1.24 1.838 1.24 1.07 1.835 2.807 1.305 3.492.998.108-.775.42-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.933 0-1.31.468-2.38 1.235-3.22-.124-.304-.535-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.45 11.45 0 013.003-.403c1.02.005 2.045.137 3.003.403 2.29-1.552 3.295-1.23 3.295-1.23.655 1.65.245 2.872.12 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.805 5.625-5.475 5.922.43.37.815 1.096.815 2.21 0 1.595-.015 2.883-.015 3.273 0 .32.216.694.825.576C20.565 21.795 24 17.295 24 12c0-6.63-5.373-12-12-12z"
             />
           </svg>
-          <span class="text-gray-900 font-medium">View on GitHub</span>
+          <span class="font-medium text-gray-900">View on GitHub</span>
         </a>
       </div>
     </main>
