--- a/pages/updates.html
+++ b/pages/updates.html
@@ -16,31 +16,33 @@
     <header id="header"></header>
 
     <main
-      class="flex flex-col px-8 mb-auto font-sourcesansmd:px-0 md:max-w-5xl md:mx-auto"
+      class="font-sourcesansmd:px-0 mb-auto flex flex-col px-8 md:mx-auto md:max-w-5xl"
     >
       <h1>Updates</h1>
 
-      <p class="text-center mb-6">Updates on our team, research, and events.</p>
+      <p class="mb-6 text-center">Updates on our team, research, and events.</p>
 
       <ul class="space-y-6">
-        
-<li class="border border-gray-200 rounded-lg p-6 shadow-md transition">
-  <p class="text-sm text-gray-500 mb-2">2026-01-16</p>
+        <li class="rounded-lg border border-gray-200 p-6 shadow-md transition">
+          <p class="mb-2 text-sm text-gray-500">2026-01-16</p>
 
-  <h3 class="text-left mb-2"> See you at OSM26</h3>
+          <h3 class="mb-2 text-left">See you at OSM26</h3>
 
-  <p class="text-gray-700">Hope to see you at AGU Ocean Science Meeting 2026! Stop by our posters on Monday and Wednesday in Hall 4</p>
+          <p class="text-gray-700">
+            Hope to see you at AGU Ocean Science Meeting 2026! Stop by our
+            posters on Monday and Wednesday in Hall 4
+          </p>
 
-  
-        <a
-          href="/pages/posts/2026-01-16-see-you-at-osm26.html"
-          class="flex items-center gap-1 text-md text-gray-600 hover:underline mt-2"
-        >
-          <span>Read more</span>
-          <span aria-hidden="true" class="text-lg leading-none">&rsaquo;</span>
-        </a>
-      
-</li>
+          <a
+            href="/pages/posts/2026-01-16-see-you-at-osm26.html"
+            class="text-md mt-2 flex items-center gap-1 text-gray-600 hover:underline"
+          >
+            <span>Read more</span>
+            <span aria-hidden="true" class="text-lg leading-none"
+              >&rsaquo;</span
+            >
+          </a>
+        </li>
       </ul>
     </main>
 
