style: fix text wrap issue on home screen

--- a/index.html
+++ b/index.html
@@ -21,25 +21,30 @@
       ></div>
 
       <div class="relative mx-12 max-w-3xl text-justify text-white sm:mx-32">
-        <h1 class="text-left text-7xl">CDR Forecasting Stack</h1>
-        <p class="text-2xl wrap-break-word text-white">
+        <h1 class="text-left text-5xl sm:text-7xl">CDR Forecasting Stack</h1>
+        <p class="text-2xl whitespace-normal text-white">
           Accessible and high-fidelity forecasting for marine carbon removal. An
           AI-enabled stack combining physics-based models and machine learning
           to predict CO<sub>2</sub> uptake and durability at scale.
         </p>
 
         <div class="text-md flex items-center gap-5 pt-10 text-gray-200">
-          <p class="whitespace-nowrap text-white italic">
+          <p class="whitespace-normal text-white italic sm:whitespace-nowrap">
             This project is generously supported by Bezos Earth Fund
           </p>
-          <div class="rounded bg-white/50 px-2 py-1 backdrop-blur-sm">
+
+          <div
+            class="hidden rounded bg-white/50 px-2 py-1 backdrop-blur-sm sm:block"
+          >
             <img
               src="/images/logos/bef.webp"
               alt="Bezos Earth Fund"
               class="h-15 w-auto object-contain"
             />
           </div>
-          <div class="rounded bg-white/50 px-2 py-1 backdrop-blur-sm">
+          <div
+            class="hidden rounded bg-white/50 px-2 py-1 backdrop-blur-sm sm:block"
+          >
             <img
               src="/images/logos/ai-nature.webp"
               alt="Bezos Earth Fund"
