--- a/pages/join-us.html
+++ b/pages/join-us.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Accessible and high-fidelity marine carbon removal forecasting using physics-based models and AI."
+    />
+    <meta
+      name="keywords"
+      content="marine carbon removal, CDR, AI forecasting, climate models, CO2 uptake"
+    />
+    <meta name="robots" content="index, follow" />
+    <title>CDR Forecasting Stack</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
