--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta name="robots" content="index, follow" />
     <title>CDR Forecasting Stack</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link href="/styles/output.css" rel="stylesheet" />
   </head>
 
