fix: correct typos on about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,12 +25,12 @@
 
       <p>
         Our mission is to make high-fidelity marine carbon dioxide removal
-        (mCDR) forecasting accessible, fast, and scientifically robbust. We are
+        (mCDR) forecasting accessible, fast, and scientifically robust. We are
         building an AI-enabled forecasting stack that couples GPU-accelerated
         ocean and biogeochemistry models with kilometer-scale atmospheric
         predictions, enabling users to forecast CO<sub>2</sub> uptake and
-        durability decasdes into the future. By unifying advances in
-        physics-based modeling and machien learning, the CDR Forecasting Stack
+        durability decades into the future. By unifying advances in
+        physics-based modeling and machine learning, the CDR Forecasting Stack
         brings next-generation carbon forecasting within reach of a broad
         community of researchers, practitioners, and decision-makers.
       </p>
