fix: typos and add links to logos

--- a/index.html
+++ b/index.html
@@ -47,20 +47,34 @@
           <div
             class="hidden rounded bg-white/50 px-2 py-1 backdrop-blur-sm sm:block"
           >
-            <img
-              src="/images/logos/bef.webp"
-              alt="Bezos Earth Fund"
-              class="h-15 w-auto object-contain"
-            />
+            <a
+              href="https://www.bezosearthfund.org"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Bezos Earth Fund (opens in new tab)"
+            >
+              <img
+                src="/images/logos/bef.webp"
+                alt="Bezos Earth Fund"
+                class="h-15 w-auto object-contain"
+              />
+            </a>
           </div>
           <div
             class="hidden rounded bg-white/50 px-2 py-1 backdrop-blur-sm sm:block"
           >
-            <img
-              src="/images/logos/ai-nature.webp"
-              alt="Bezos Earth Fund"
-              class="h-15 w-auto object-contain"
-            />
+            <a
+              href="https://aiforclimateandnature.org/"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Bezos Earth Fund (opens in new tab)"
+            >
+              <img
+                src="/images/logos/ai-nature.webp"
+                alt="Bezos Earth Fund"
+                class="h-15 w-auto object-contain"
+              />
+            </a>
           </div>
         </div>
       </div>
