add movie to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,8 +37,10 @@
 
       <h1>Funding</h1>
 
-      <p>This project is supported by Bezos Earth Fund.</p>
-      <p>
+      <p class="text-center italic">
+        This project is generously supported by the Bezos Earth Fund.
+      </p>
+      <p class="text-center">
         Read more in our press releases from:
 
         <a
@@ -93,6 +95,19 @@
             class="h-15 md:h-30"
           />
         </a>
+      </div>
+
+      <div class="flex items-center justify-center gap-8 pt-16 pb-16 md:gap-32">
+        <div class="rounded-lg shadow-lg shadow-black">
+          <video
+            controls="controls"
+            width="500"
+            name="Team describing the project"
+            class="rounded-lg"
+          >
+            <source src="/movies/team-video.mov" />
+          </video>
+        </div>
       </div>
     </main>
 
