fix: chance video source from local file to an asset in a release

--- a/pages/about.html
+++ b/pages/about.html
@@ -105,7 +105,9 @@
             name="Team describing the project"
             class="rounded-lg"
           >
-            <source src="/movies/team-video.mov" />
+            <source
+              src="https://github.com/CDR-Forecasting-Stack/CDR-Forecasting-Stack.github.io/releases/download/team-video-release/team-video.mov"
+            />
           </video>
         </div>
       </div>
